--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage":"http://pizzeria.com",
+  "homepage": "https://KamelABA.github.io/PizzereiaMenu",
   "dependencies": {
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
